--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,6 +23,11 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v1
 
+      - name: install govulncheck
+        run: |
+          export PATH=$PATH:$(go env GOPATH)/bin
+          go install golang.org/x/vuln/cmd/govulncheck@latest
+
       - name: test
         env:
           GOFLAGS: -mod=vendor
