run vuln and staticcheck on pushes as well as PRs

--- a/.github/workflows/staticcheck.yml
+++ b/.github/workflows/staticcheck.yml
@@ -1,8 +1,10 @@
 name: staticcheck
 
 on:
+  push:
+    branches: [main]
   pull_request:
-    branches: [main, prod]
+    branches: [main]
 
 jobs:
   test:
