--- a/.github/workflows/govulncheck.yml
+++ b/.github/workflows/govulncheck.yml
@@ -14,14 +14,14 @@ jobs:
       GOPROXY: "https://proxy.golang.org,direct"
 
     steps:
-      - name: Set up Go 1.23.2
-        uses: actions/setup-go@v2
-        with:
-          go-version: '1.23.2'
-        id: go
-
       - name: Check out code into the Go module directory
         uses: actions/checkout@v1
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: 'go.mod'
+        id: go
 
       - name: install govulncheck
         run: |
